# oracle-mcp-server

./: Dockerfile  README-zh.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
db_context/: __init__.py  database.py
db_context/schema/: formatter.py
test/db/: .env.example  docker-compose-simple.yml
test/db/old/: docker-compose.yml
